<resources>
    <string name="app_name">EGS Tab Distribution</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="report">Report</string>
    <string name="upload_document">Upload Document</string>
    <string name="attendence">Attendance</string>
    <string name="sync">Sync</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sync_offline_data">Sync Offline Data</string>
    <string name="labour_registration_saved_offline">Labour Registration Saved Offline</string>
    <string name="entries_to_sync">Entries To Sync</string>
    <string name="documents_saved_offline">Documents Saved Offline</string>
    <string name="sync_land_documents">Sync Land Documents</string>
    <string name="sync_labour_data">Sync Labour Data</string>
    <string name="labours_registered_online">Labours Registered Online</string>
    <string name="allocate_work">Allocate Work</string>
    <string name="full_name_required">Full Name Required</string>
    <string name="enter_valid_mobile">Enter Valid Mobile Number</string>
    <string name="select_duration">Select Gender\n</string>
    <string name="select_date_of_birth">Select Date Of Birth</string>
    <string name="select_district">Select District</string>
    <string name="select_village">Select Village</string>
    <string name="select_taluka">Select Taluka</string>
    <string name="enter_valid_id_card_number">Enter MNREGA ID Card Number</string>
    <string name="select_relationship">Select Relationship</string>
    <string name="select_marital_status">Select Marital Status</string>
    <string name="select_document">Select Document</string>
    <string name="registration_step_1">Registration Step 1</string>
    <string name="registration_step_2">Registration Step 2</string>
    <string name="select_gender">Select Gender</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="mgnrega_card">Mnrega Card</string>
    <string name="voter_id">Voter Id Card</string>
    <string name="labor_photo">Labour Photo</string>
    <string name="location">Location</string>
    <string name="add_documents">Add Documents</string>
    <string name="family_details">Family Details</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="district">District</string>
    <string name="taluka">Taluka</string>
    <string name="village">Village</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="landline_number">Landline Number ( Optional )</string>
    <string name="mgnrega_id_card_number">MGNREGA Id Card Number</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="update_details_step_1">Update Details Step 1</string>
    <string name="update_details_step_2">Update Details Step 2</string>
    <string name="gender">Gender</string>
    <string name="landline">Landline</string>
    <string name="mgnrega_id">Mgnrega Id</string>
    <string name="labour_details">Labour Details</string>
    <string name="select_all_documents">Select All Documents</string>
    <string name="enter_document_name">Enter document name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="half_day">Half Day</string>
    <string name="full_day">Full Day</string>
    <string name="error_while_login">Error while login</string>
    <string name="login_successful">Login successful</string>
    <string name="labour_list">Labour List</string>
    <string name="enter_mgnrega_id">Enter MGNREGA Id</string>
    <string name="address">Address -</string>
    <string name="project_duration">Project Duration -</string>
    <string name="select_skills">Select Skill</string>
    <string name="enter_mgnrega_id_1">Enter MGNREGA Id</string>
    <string name="view_attendance">View Attendance</string>
    <string name="select_project">Select Project</string>
    <string name="project_name">Project Name</string>
    <string name="attendance_updated_successfully">Attendance updated successfully</string>
    <string name="attendance_updating_failed">Attendance updating failed</string>
    <string name="error_occured_during_api_call">Error occured during api call</string>
    <string name="select_day">Select Day</string>
    <string name="uploaded_documents">Uploaded Documents</string>
    <string name="not_approved">Not Approved</string>
    <string name="title_activity_officer_main">OfficerMainActivity</string>
    <string name="title_home">Home</string>
    <string name="uploaded_document">Uploaded Documents</string>
    <string name="please_try_again">Please try again\n</string>
    <string name="sent_for_approval">Sent For Approval</string>
    <string name="not_approved_list">Not Approved Labours list</string>
    <string name="approved_list">Approved Labours List</string>
    <string name="status">Status</string>
    <string name="remarks">Remarks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrations_received_for_approval">Registrations Received For Approval</string>
    <string name="approved">Approved</string>
    <string name="registration_status">Registration Status</string>
    <string name="select_status">Select Registration Status</string>
    <string name="select_reason">Select Reason</string>
    <string name="submit">submit</string>
    <string name="add_remarks">Add Remarks</string>
    <string name="select_all_details">Select All Details</string>
    <string name="labour_registration_approved">Labour registration approved</string>
    <string name="something_went_wrong_please_try_again">Something went wrong please try again</string>
    <string name="labour_status_upaded">Labour registration status updated</string>
    <string name="reason">Reason</string>
    <string name="rejected_list">Rejected List</string>
    <string name="rejected">Rejected</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End Date</string>
    <string name="skills">Skills</string>
    <string name="labour_details_upaded">Labour details updated successfully</string>
    <string name="failed_updating_labour">Error while updating labour details please try again</string>
    <string name="failed_updating_labour_response">response unsuccessful please try again</string>
    <string name="project">Project</string>
    <string name="internet_is_not_available_please_check">Internet is not available please check</string>
    <string name="error_while_updating_information_please_try_again">Error while updating information please try again</string>
    <string name="date">Date :</string>
    <string name="remark">Remark :</string>
    <string name="reason_1">Reason :</string>
    <string name="status_1">Status :</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="status_">Status :</string>
    <string name="remark_">Remark :</string>
    <string name="date_">Date :</string>
    <string name="from">From</string>
    <string name="to">To  </string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="no_records_found">No records found</string>
    <string name="no_records_founds">no_records_found</string>
    <string name="received_for_approval">Received For Approval</string>
    <string name="documents">Documents</string>
    <string name="labour_registrations">Labour Registrations</string>
    <string name="action">Action</string>
    <string name="document_status">Document Status</string>
    <string name="imageview">ImageView</string>
    <string name="add_document">Add Document</string>
    <string name="response_unsuccessfull">response unsuccessful</string>
    <string name="resubmitted">Re-Submitted</string>
    <string name="resubmitted_labour_list">Re-Submitted Labour List</string>
    <string name="re_submitted_docs">Re-Submitted Documents</string>
    <string name="verify_documents">Verify Document</string>
    <string name="re_submitted_labour_list">Resubmitted Labour List</string>
    <string name="skill">Skill</string>
    <string name="pdf_download_failed_try_again">Document download failed please try again</string>
    <string name="update_document">Update Document</string>
    <string name="edit_document">Edit Document</string>
    <string name="please_make_changes_to_document_before_submitting">Please Make Changes To Document Before Submitting</string>
    <string name="retry">Retry</string>
    <string name="approved_document_list">Approved Document List</string>
    <string name="grampanchayat_name">Grampanchayat Name</string>
    <string name="gram_panchayat_name">Grampanchayat Name</string>
    <string name="gramsevak_id_card">Gramsevak Id Card</string>
    <string name="beneficiary_photo">Beneficiary Photo</string>
    <string name="register">Register</string>
    <string name="enter_aadhar_card_number">Enter Aadhar Card Number</string>
    <string name="enter_grampanchayat_name">Enter Grampanchayat Name</string>
    <string name="enter_all_details">Enter All Details</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="tablet_distribution_information">Tablet Distribution Information</string>
    <string name="egs">EGS</string>
    <string name="are_you_sure_you_want_to_exit_app">Are you sure you want to exit App?</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tablet_imei_photo">Tablet IMEI Photo</string>
    <string name="user_list">User List</string>
    <string name="response_failed">Response Failed Please Try Again</string>
    <string name="egs_tab_distribution">EGS Tab Distribution Beneficiary List</string>
    <string name="aadhar_card_number">Aadhar Card Id</string>
    <string name="beneficiary_details">Beneficiary Details</string>
    <string name="beneficiary_registration">Beneficiary Registration</string>
</resources>