<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sipl.egstabdistribution.ui.BeneficiaryDetailsActivity">
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:paddingBottom="24dp"
                android:background="@color/white"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true"
                app:cardCornerRadius="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/full_name"
                            android:textSize="14sp"
                            android:textColor="@color/black" android:layout_weight="7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                        <TextView
                            android:textSize="14sp"
                            android:id="@+id/tvFullName"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:layout_weight="4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/black" android:layout_weight="7"
                            android:text="@string/district"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                        <TextView
                            android:textSize="14sp"
                            android:id="@+id/tvDistritct"
                            android:lines="1"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_weight="4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/black" android:layout_weight="7"
                            android:text="@string/taluka"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                        <TextView
                            android:textSize="14sp"
                            android:id="@+id/tvTaluka"
                            android:lines="1"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_weight="4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/black" android:layout_weight="7"
                            android:text="@string/village"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                        <TextView
                            android:textSize="14sp"
                            android:id="@+id/tvVillage"
                            android:lines="1"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_weight="4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/black" android:layout_weight="7"
                            android:text="@string/grampanchayat_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                        <TextView
                            android:textSize="14sp"
                            android:id="@+id/tvGrampanchayatName"
                            android:lines="1"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_weight="4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/black" android:layout_weight="7"
                            android:text="@string/mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                        <TextView
                            android:textSize="14sp"
                            android:id="@+id/tvMobile"
                            android:lines="1"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_weight="4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/black" android:layout_weight="7"
                            android:text="@string/aadhar_card_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                        <TextView
                            android:textSize="14sp"
                            android:id="@+id/tvAadharCardNumber"
                            android:lines="1"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_weight="4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="14sp"
                            android:textColor="@color/black" android:layout_weight="7"
                            android:text="@string/location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                        <TextView
                            android:textSize="14sp"
                            android:id="@+id/tvLatLong"
                            android:lines="1"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_weight="4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></TextView>
                    </LinearLayout>

                    <TextView
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/appBlue"
                        android:text="Documents"
                        android:textSize="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></TextView>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.cardview.widget.CardView
                            android:layout_weight="1"
                            android:background="@color/white"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="true"
                            app:cardPreventCornerOverlap="true"
                            app:cardCornerRadius="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <ImageView
                                    android:layout_weight="1"
                                    android:scaleType="fitXY"
                                    android:id="@+id/ivPhoto"
                                    android:layout_gravity="center"
                                    android:src="@drawable/document"
                                    android:layout_width="match_parent"
                                    android:layout_height="100dp"></ImageView>

                                <TextView
                                    android:textSize="14sp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:gravity="center"
                                    android:text="@string/beneficiary_photo"></TextView>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_weight="1"
                            android:background="@color/white"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="true"
                            app:cardPreventCornerOverlap="true"
                            app:cardCornerRadius="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <ImageView

                                    android:layout_weight="1"
                                    android:scaleType="fitXY"
                                    android:id="@+id/ivGramsevakId"
                                    android:layout_gravity="center"
                                    android:src="@drawable/document"
                                    android:layout_width="match_parent"
                                    android:layout_height="100dp"></ImageView>
                                <TextView
                                    android:textSize="14sp"
                                    android:gravity="center"
                                    android:layout_marginBottom="10dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_gravity="center"
                                    android:text="@string/gramsevak_id_card"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"></TextView>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_weight="1"
                            android:background="@color/white"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="true"
                            app:cardPreventCornerOverlap="true"
                            app:cardCornerRadius="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <ImageView
                                    android:layout_weight="1"
                                    android:scaleType="fitXY"
                                    android:id="@+id/ivAadhar"
                                    android:layout_gravity="center"
                                    android:src="@drawable/document"
                                    android:layout_width="match_parent"
                                    android:layout_height="100dp"></ImageView>

                                <TextView
                                    android:textSize="14sp"
                                    android:gravity="center"
                                    android:layout_marginBottom="10dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_gravity="center"
                                    android:text="@string/aadhar_card"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"></TextView>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_weight="1"
                            android:background="@color/white"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="true"
                            app:cardPreventCornerOverlap="true"
                            app:cardCornerRadius="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <ImageView
                                    android:layout_weight="1"
                                    android:scaleType="fitXY"
                                    android:id="@+id/ivImeiPhoto"
                                    android:layout_gravity="center"
                                    android:src="@drawable/document"
                                    android:layout_width="match_parent"
                                    android:layout_height="100dp"></ImageView>

                                <TextView
                                    android:textSize="14sp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:gravity="center"
                                    android:text="@string/tablet_imei_photo"></TextView>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>